--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ body{
     background: #1b1b1b;
     color: #fff;
 }
-.navbar{
+header{
     background-color: #353535;
     display: flex;
     justify-content: space-between;
@@ -40,4 +40,66 @@ body{
 .links_li a{
     text-decoration: none;
     color: #fff;
+}
+
+.hero{
+    margin-top: 50px;
+}
+.container{
+    display: flex;
+    justify-content: center;
+}
+.container > div{
+    max-width: 1300px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 25px;
+    background: linear-gradient(to top, #111, #353535);
+    box-shadow: 0 0 10px 5px #FF9400;
+}
+.hero img{
+    width: 800px;
+}
+.hero_info{
+    display: flex;
+    flex-direction: column;
+}
+.hero_info h2{
+    font-family: "Bebas Neue", sans-serif;
+    font-size: 4rem;
+}
+.hero_info p{
+    font-family: "Roboto Condensed", sans-serif;
+    font-size: 1.2rem;
+}
+.btn-container{
+    display: flex;
+    justify-content: center;
+    gap: 20px;
+    margin-top: 20px;
+}
+.btn-container a{
+    background: #FF9400;
+    padding: 10px;
+    color: #1B1B1B;
+    text-decoration: none;
+    border: 2px solid #fff;
+    font-family: "Roboto Condensed", sans-serif;
+    font-size: 1.1rem;
+    font-weight: 600;
+}
+
+.info{
+    margin-top: 35px;
+    display: flex;
+    justify-content: center;
+}
+.info p{
+    max-width: 1000px;
+    font-family: "Roboto Condensed", sans-serif;
+    font-size: 1.05rem;
+    text-align: center;
+    border-bottom: 2px solid #FF9400;
+    border-left: 2px solid #FF9400;
 }
