--- a/style.css
+++ b/style.css
@@ -1,35 +1,45 @@
 @import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Roboto+Condensed:wght@300;400;700&display=swap');
+
+:root{
+    --darkergray: #111;
+    --darkgray: #1b1b1b;
+    --lightgray: #353535;
+    --white: #fff;
+    --black: #000;
+    --orange: #ff9400;
+}
 *{
     margin: 0;
     padding: 0;
+    font-family: "Roboto Condensed", sans-serif;
 }
 body{
-    background: #1b1b1b;
-    color: #fff;
+    background: var(--darkgray);
+    color: var(--white);
 }
 
 
 /* =============== HEADER =============== */
 
 header{
-    background-color: #353535;
+    background: var(--lightgray);
     display: flex;
     justify-content: space-between;
     align-items: center;
     height: 100px;
-    box-shadow: 1px 5px 20px 8px #000;
+    box-shadow: 1px 5px 20px 8px var(--black);
 }
 .logo{
-    border: 4px solid #1B1B1B;
+    border: 4px solid var(--darkgray);
     border-radius: 100%;
     height: 80px;
     margin: 5px 20px;
-    box-shadow: 2px 2px 8px #1b1b1b;
+    box-shadow: 0px 0px 8px var(--darkgray);
 }
 .titulo{
     font-family: "Bebas Neue", sans-serif;
     font-size: 5.3rem;
-    text-shadow: 2px 2px 4px #FF9400;
+    text-shadow: 2px 2px 4px var(--orange);
 }
 .links{
     display: flex;
@@ -38,12 +48,11 @@ header{
 }
 .links_li{
     margin: 8px;
-    font-family: "Roboto Condensed", sans-serif;
     font-size: 1.2rem;
 }
 .links_li a{
     text-decoration: none;
-    color: #fff;
+    color: var(--white);
 }
 
 
@@ -62,8 +71,8 @@ header{
     justify-content: center;
     align-items: center;
     padding: 25px;
-    background: linear-gradient(to top, #111, #353535);
-    box-shadow: 0 0 10px 5px #FF9400;
+    background: linear-gradient(to top, var(--darkergray), var(--lightgray));
+    box-shadow: 0 0 10px 5px var(--orange);
 }
 .hero img{
     width: 800px;
@@ -77,7 +86,6 @@ header{
     font-size: 4rem;
 }
 .hero_info p{
-    font-family: "Roboto Condensed", sans-serif;
     font-size: 1.2rem;
 }
 .btn-container{
@@ -87,12 +95,11 @@ header{
     margin-top: 20px;
 }
 .btn-container a{
-    background: #FF9400;
+    background: var(--orange);
     padding: 10px;
-    color: #1B1B1B;
+    color: var(--darkgray);
     text-decoration: none;
-    border: 2px solid #fff;
-    font-family: "Roboto Condensed", sans-serif;
+    border: 2px solid var(--white);
     font-size: 1.1rem;
     font-weight: 600;
 }
@@ -106,11 +113,10 @@ header{
 }
 .info p{
     max-width: 1000px;
-    font-family: "Roboto Condensed", sans-serif;
     font-size: 1.05rem;
     text-align: center;
-    border-bottom: 2px solid #FF9400;
-    border-left: 2px solid #FF9400;
+    border-bottom: 2px solid var(--orange);
+    border-left: 2px solid var(--orange);
 }
 
 
@@ -127,7 +133,6 @@ header{
     font-family: "Bebas Neue";
     font-size: 2.2rem;
     text-align: center;
-    font-weight: 600;
 }
 
 .cards-container{
@@ -139,23 +144,126 @@ header{
 }
 
 .card{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     text-align: center;
-    font-family: "Roboto Condensed", serif;
-    background: linear-gradient(to bottom,#000 10%, #1B1B1B 100%);
-    border-top: 2px solid #FF9400;
+    background: linear-gradient(to bottom,var(--black) 10%, var(--darkgray) 100%);
+    border-top: 2px solid var(--orange);
     padding: 20px;
+    width: 500px;
+    height: 250px;
 }
 
 .card h3{
     font-size: 50px;
+    border: 2px solid var(--orange);
+    box-shadow: 0px 0px 8px 2px var(--orange);
+    width: 70px;
+    height: 70px;
+    border-radius: 50%;
+    margin-bottom: 15px;
 }
 
 .card h4{
     font-size: 20px;
     font-weight: 900;
-    color: #FF9400;
-    border-bottom: 1px solid #FF9400;
-    border-top: 1px solid #FF9400;
+    color: var(--orange);
+    border-bottom: 1px solid var(--orange);
+    border-top: 1px solid var(--orange);
     margin-bottom: 10px;
-    background: linear-gradient(to top, #000, #1B1B1B);
+    background: linear-gradient(to top, var(--black), var(--darkgray));
+}
+
+
+/* =============== FOOTER =============== */
+footer{
+    margin-top: 100px;
+    border-top: 1px solid #FF9400;
+    background: var(--darkergray);
+}
+
+.info-section{
+    margin: 30px 40px;
+    display: flex;
+    gap: 20px;
+    justify-content: space-between;
+}
+
+.info-section h2{
+    margin-bottom: 25px;
+    font-family: "Bebas Neue", sans-serif;
+    font-size: 2rem;
+}
+
+.info-container{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+}
+
+.locales{
+    display: flex;
+    gap: 30px;
+}
+
+.local{
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    border-left: 2px solid var(--orange);
+    padding: 10px;
+}
+
+.local a{
+    font-size: 1.4rem;
+    text-decoration: underline;
+    color: var(--white);
+}
+
+.local p{
+    display: inline-block;
+    font-size: 1.1rem;
+}
+
+.redes{
+    display: flex;
+    gap: 25px;
+}
+.redes a{
+    font-size: 2rem;
+    color: var(--white);
+}
+
+.info-section iframe{
+    width: 600px;
+    height: 450px;
+    border: 2px solid var(--orange);
+    box-shadow: 0px 0px 8px 2px var(--orange);
+    object-fit: contain;
+}
+
+footer hr{
+    border-color: var(--orange);
+}
+
+.copyright-container{
+    margin-top: 30px;
+    padding-bottom: 40px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+}
+
+.copyright-container img{
+    width: 70px;
+    border-radius: 50%;
+    opacity: 60%;
+}
+
+.copyright-container p{
+    font-size: 0.9rem;
+    opacity: 60%;
 }
