--- a/style.css
+++ b/style.css
@@ -28,6 +28,8 @@ header{
     align-items: center;
     height: 100px;
     box-shadow: 1px 5px 20px 8px var(--black);
+    position: sticky;
+    top: 0;
 }
 .logo{
     border: 4px solid var(--darkgray);
@@ -35,7 +37,13 @@ header{
     height: 80px;
     margin: 5px 20px;
     box-shadow: 0px 0px 8px var(--darkgray);
+    transition: box-shadow .3s;
 }
+
+.logo:hover{
+    box-shadow: 0 0 8px var(--orange);
+}
+
 .titulo{
     font-family: "Bebas Neue", sans-serif;
     font-size: 5.3rem;
@@ -53,6 +61,11 @@ header{
 .links_li a{
     text-decoration: none;
     color: var(--white);
+    transition: color 0.1s;
+}
+
+.links a:hover{
+    color: var(--orange);
 }
 
 
@@ -102,6 +115,12 @@ header{
     border: 2px solid var(--white);
     font-size: 1.1rem;
     font-weight: 600;
+    transition: all .3s;
+}
+
+.btn-container a:hover{
+    background: var(--darkgray);
+    color: var(--orange);
 }
 
 
@@ -219,6 +238,11 @@ footer{
     font-size: 1.4rem;
     text-decoration: underline;
     color: var(--white);
+    transition: color 0.2s;
+}
+
+.local a:hover{
+    color: var(--orange);
 }
 
 .local p{
@@ -233,6 +257,14 @@ footer{
 .redes a{
     font-size: 2rem;
     color: var(--white);
+    height: 30px;
+    text-align: center;
+    transition: color 0.4s, font-size 0.4s;
+}
+
+.redes a:hover{
+    color: var(--orange);
+    font-size: 3rem;
 }
 
 .info-section iframe{
