--- a/style.css
+++ b/style.css
@@ -12,6 +12,7 @@
     margin: 0;
     padding: 0;
     font-family: "Roboto Condensed", sans-serif;
+    scroll-behavior: smooth;
 }
 body{
     background: var(--darkgray);
@@ -207,6 +208,7 @@ footer{
     display: flex;
     gap: 20px;
     justify-content: space-between;
+    flex-wrap: wrap;
 }
 
 .info-section h2{
