--- a/style_responsive.css
+++ b/style_responsive.css
@@ -1,4 +1,10 @@
-@media (max-width: 1200px) {
+@media (max-width: 1440px) {
+
+    /* HEADER */
+    .titulo{
+        font-size: 4.5rem;
+    }
+
     /* HERO */
     .hero{
         display: flex;
@@ -6,7 +12,7 @@
     }
 
     .container{
-        max-width: 1000px;
+        max-width: 80%;
     }
 
     .container > div{
@@ -19,10 +25,9 @@
         object-fit: cover;
     }
 
-
-    /* CARDS */
-    .card{
-        height: 400px;
+    /* INFO */
+    .info p{
+        max-width: 800px;
     }
 
     /* FOOTER */
@@ -41,26 +46,26 @@
     }
 }
 
-@media (max-width: 992px){
+@media (max-width: 1024px){
 
 
     /* HEADER */
     header{
-        max-width: 100vw;
+        max-width: 100%;
     }
     .titulo{
-        font-size: 4.5rem;
+        font-size: 3.5rem;
     }
 
 
     /* NAVBAR */
     .links a{
-        font-size: 1.1rem;
+        font-size: .9rem;
     }
 
     /* HERO */
     .container{
-        max-width: 800px;
+        max-width: 80%;
     }
 
     .hero img{
@@ -68,8 +73,103 @@
     }
 
     .info p{
-        max-width: 800px;
+        max-width: 650px;
     }
 
 
+}
+
+@media (max-width: 768px){
+    /* HEADER */
+    header{
+        max-width: 100%;
+    }
+    .titulo{
+        font-size: 4rem;
+    }
+    .navbar{
+        display: none;
+    }
+    .check-label{
+        display: inline-block;
+    }
+
+    /* HERO */
+    .container{
+        max-width: 80%;
+    }
+    .container > div{
+        flex-wrap: wrap;
+    }
+    .hero img{
+        height: fit-content;
+    }
+    .hero_info h2{
+        font-size: 3rem; 
+    }
+
+    /* INFO */
+    .info p{
+        max-width: 70%;
+    }
+
+    /* FOOTER */
+    footer{
+        max-width: 100%;
+    }
+    .locales{
+        flex-wrap: wrap;
+    }
+}
+
+@media (max-width:600px) {
+    .titulo{
+        font-size: 3rem;
+    }
+    .logo{
+        width: 60px;
+        height: 60px;
+    }
+
+    /* HERO */
+    .container{
+        max-width: 80%;
+    }
+    .btn-container{
+        flex-wrap: wrap;
+    }
+}
+
+@media (max-width: 480px){
+    /* HEADER */
+    .titulo{
+        font-size: 2.5rem;
+        margin-right: 15px;
+    }
+    .logo{
+        width: 50px;
+        height: 50px;
+    }
+
+    /* HERO */
+    .container > div{
+        max-width: 80%;
+    }
+
+    .hero img{
+        display: none;
+    }
+
+    /* FOOTER */
+    .info-container{
+        width: 80%;
+    }
+    .card{
+        height: 400px;
+    }
+
+}
+
+@media (max-width:320px){
+    
 }
